--- a/prez.qmd
+++ b/prez.qmd
@@ -24,7 +24,7 @@ Data Manager, M.S. Environmental Data Science
 
 $~$
 
-<h2 style="font-size: 12.0pt; text-align:left;">
+<h2 style="font-size: 10.0pt; text-align:left;">
 
 ^1^Resilience Institute Bridging Biological Training and Research\
 ^2^National Center of Ecological Analysis and Synthesis
@@ -61,7 +61,7 @@ And at RIBBiTR we have a lot of fascinating research going on to try and uncover
 :::
 
 ::: {.column width="68%"}
-![Ramachandran, R. et al 2021](images/os.jpg){fig-align="center" width="6in"}
+![Ramachandran, R. et al 2021](images/os.jpg){fig-align="center" width="5.8in"}
 :::
 :::
 
@@ -118,7 +118,7 @@ And finally Inclusivity, are we developing these pipelines with the commitment o
 </h2>
 :::
 
-::: {.fragment .fade-in}
+::: {.fragment .fade-in fragment-index="8"}
 <h2 style="font-size: 15.0pt;">
 
 3.  Inclusive
@@ -154,12 +154,21 @@ And finally Inclusivity, are we developing these pipelines with the commitment o
 ![](images/dataone.png){fig-align="center" width="6in"}
 :::
 
-::: {.fragment .r-stack fragment-index="7"}
+::: {.fragment .r-stack .current-visible fragment-index="7"}
 ![](images/reproducible_pipeline.png){fig-align="center" width="6in" height="4in"}
 :::
+
+::: {.fragment .r-stack fragment-index="8"}
+![](images/cure.jpg){fig-align="center" width="6in"}
 :::
+
+
 :::
+
 :::
+
+:::
+
 
 ::: notes
 At RIBBiTR we have been doing our best to promote and adhere to open science principles.
@@ -201,7 +210,7 @@ As for inclusive: we at RIBBiTR have worked very hard to promote and build our e
 ::: notes
 The adoption of open science principles through out the sciences has and will almost certainly continue to increase the efficiency and quality of research, allow for expansion of innovation, and escalate collaboration. With open science principles our colleagues can verify our research at a much more efficient pace by providing the raw data, code for analysis, and manuscript all in a reproducible repository. 
 
-Which brings me to my final point, of which I will admit I am slightly bias towards as I am a data manager, but the importance of transparent data sharing through public repositories. Take a moment and think about all the data you have ever collected or a student of yours has collected, whether it was one day in the field, a masters students two years worth of data, or an entire PhD project. Is that data just sitting on a hard drive on a dusty old laptop? Well that is called dark data, in regards to the academic world, and I suspect we could pool all the dark data in this room and have readily available data for an endless supply of master or even PhD students. So utilize public data repositories, share your, data and lets work together to uncover the answers hidden in our data. 
+Which brings me to my final point, of which I will admit I am slightly bias towards as I am a data manager, but the importance of transparent data sharing through public repositories. Take a moment and think about all the data you have ever collected or a student of yours has collected, whether it was one day in the field, a masters students two years worth of data, or an entire PhD project. Is that data just sitting on a hard drive on a dusty old laptop? Well that is called dark data, in regards to the academic world, and I suspect we could pool all the dark data in this room and have readily available data for an endless supply of master or even PhD students. So utilize public data repositories, share your data, and lets work together to uncover the answers hidden in our data. 
 
 Thank you
 :::
