--- a/prez.qmd
+++ b/prez.qmd
@@ -34,7 +34,6 @@ $~$
 ::: notes
 Hi, my names Jake Eisaguirre and I am the Data Manager for RIBBiTR.
 
-
 We are an institute that studies a fungal pathogen in Amphibians across the western hemisphere.
 
 And at RIBBiTR we have a lot of fascinating research going on to try and uncover the mechanisms of this disease, however I am going to spend this time discussing the application of "open science" at RIBBiTR and the value it can bring to science as a whole.
@@ -159,16 +158,11 @@ And finally Inclusivity, are we developing these pipelines with the commitment o
 :::
 
 ::: {.fragment .r-stack fragment-index="8"}
-![](images/cure.jpg){fig-align="center" width="6in"}
+![](images/cure.jpg){fig-align="center" width="5.5in"}
 :::
-
-
 :::
-
 :::
-
-:::
-
+::: 
 
 ::: notes
 At RIBBiTR we have been doing our best to promote and adhere to open science principles.
@@ -180,12 +174,16 @@ And following completion of our grant the entire database will be stored on a pu
 
 For promoting reproducibility at RIBBiTR I have created this diagram illustrating our workflow we promote within RIBBiTR *walk through workflow*
 
-As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates with lab based protocols on the fungal pathogen we study. We also have our pilot and exploratory project funding which provides graduate students and post docs a chance to explore specific research questions related to their work. And finally we also provide RIBBiTR 101 training sessions which our usually formatted as educational seminars for any one within RIBBiTR or associated labs to learn more about a specific area of work.      
+As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community.
+Our course based undergraduate research experience trains and educates undergraduates with lab and field based protocols.
+We also have our pilot and exploratory project funding which provides graduate students and post docs a chance to explore specific research questions related to their work.
+And finally we also provide RIBBiTR 101 training sessions which our usually formatted as educational seminars for any one within RIBBiTR or associated labs to learn more about a specific area of work.
 :::
 
 ------------------------------------------------------------------------
 
 ## Open Science for the Greater Good of Science {style="font-size:24.0pt;"}
+
 <hr color = #CADC30>
 
 ::: columns
@@ -194,7 +192,7 @@ As for inclusive: we at RIBBiTR have worked very hard to promote and build our e
 
 -   Increase efficiency and quality of research
 -   Allow for expansion of innovation
--   Escalates collaboration 
+-   Escalates collaboration
 -   Verification through efficient reproducible checking
 -   Transparent sharing of data
 -   Public Data Repositories - Dark Data
@@ -208,12 +206,16 @@ As for inclusive: we at RIBBiTR have worked very hard to promote and build our e
 :::
 
 ::: notes
-The adoption of open science principles through out the sciences has and will almost certainly continue to increase the efficiency and quality of research, allow for expansion of innovation, and escalate collaboration. With open science principles our colleagues can verify our research at a much more efficient pace by providing the raw data, code for analysis, and manuscript all in a reproducible repository. 
+The adoption of open science principles through out the sciences has and will almost certainly continue to increase the efficiency and quality of research, allow for expansion of innovation, and escalate collaboration.
+With open science principles our colleagues can verify our research at a much more efficient pace by providing the raw data, code for analysis, and manuscript all in a reproducible repository.
 
-Which brings me to my final point, of which I will admit I am slightly bias towards as I am a data manager, but the importance of transparent data sharing through public repositories. Take a moment and think about all the data you have ever collected or a student of yours has collected, whether it was one day in the field, a masters students two years worth of data, or an entire PhD project. Is that data just sitting on a hard drive on a dusty old laptop? Well that is called dark data, in regards to the academic world, and I suspect we could pool all the dark data in this room and have readily available data for an endless supply of master or even PhD students. So utilize public data repositories, share your data, and lets work together to uncover the answers hidden in our data. 
+Which brings me to my final point, of which I will admit I am slightly bias towards as I am a data manager, but the importance of transparent data sharing through public repositories.
+Take a moment and think about all the data you have ever collected or a student of yours has collected, whether it was one day in the field, a masters students two years worth of data, or an entire PhD project.
+Is that data just sitting on a hard drive on a dusty old laptop?
+Well that is called dark data, in regards to the academic world, and I suspect we could pool all the dark data in this room and have readily available data for an endless supply of master or even PhD students.
+So utilize public data repositories, share your data, and lets work together to uncover the answers hidden in our data.
 
 Thank you
 :::
 
 ------------------------------------------------------------------------
-
