--- a/prez.qmd
+++ b/prez.qmd
@@ -166,12 +166,9 @@ At RIBBiTR we have been doing our best to promote and adhere to open science pri
 
 In the realm of Accessibility we have an internal PostgreSQL relational database stored on an AWS server to allow researcher to connect on the back end query data from any where in the world. We have created a front end webapp to allow researchers to explore and download data to their local device. We also strongly recommend researchers to utilize open source software like RStudio, Jupyter Lab, and DBeaver, for analysis. Following following completion of our grant the database will be stored in a public repository like DataOne. And finally we, publish in open access journals when possible
 
+The image here illustrates one example of a reproducible workflow we promote at RIBBiTR. Researchers connect to the cloud based database on the back end. They query and analyze their data of interest in RStudio. Researchers then develop manuscripts and collaborate through Quarto documents by pushing and pulling changes between authors through git and github. Finally the entire reproducible repository is published to a journal. 
 
-
-As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community.
-Our course based undergraduate research experience trains and educates undergraduates with lab and field based protocols.
-We also have our pilot and exploratory project funding which provides graduate students and post docs a chance to explore specific research questions related to their work.
-And finally we also provide RIBBiTR 101 training sessions which our usually formatted as educational seminars for any one within RIBBiTR or associated labs to learn more about a specific area of work.
+As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates with lab and field based protocols. We also have our pilot and exploratory project funding which provides graduate students and post docs. And finally we also provide RIBBiTR 101 training sessions which our usually formatted as educational seminars for RIBBiTR researchers or associated researchers
 :::
 
 ------------------------------------------------------------------------
