--- a/prez.qmd
+++ b/prez.qmd
@@ -65,15 +65,15 @@ And at RIBBiTR we have a lot of fascinating research going on, however I am goin
 ::: notes
 Well what is open science?
 
-Maybe you have heard the term but are uncertain what it entails, maybe you know the term but uncertain how to apply it, and hopefully this is not a new term as NSF has mandated it, to a certain extent, across all NSF funded institutes with guidelines found within their NSF Public Access Plan 2.0.
+Maybe you have heard the term but are uncertain what it entails, maybe you know the term but uncertain how to apply it, and hopefully this is not a new term as NSF has mandated it, to a certain extent, across all NSF funded institutes. *remove? with guidelines found within their NSF Public Access Plan 2.0.*
 
-You can think of open science as an umbrella term encompassing the movement to make research and its dissemination accessible at all levels.
+Open science as an umbrella term encompassing the movement to make research and its dissemination accessible at all levels.
 
-Within the term of open science you can think of it broken down into three sectors: Accessibility, Reproducibility, and Inclusivity.
+There are three sectors of open science: Accessibility, Reproducibility, and Inclusivity.
 
-Accessibility encompasses open access to literature, meaning do researchers have access to your papers. But this goes beyond access to papers to include access to your code and anything else that is part of your research workflow. As well as open source software which does not have licencing costs, like RStudio, and unlike ArcGIS. Along with utilizing public data repositories.
+Accessibility encompasses open access to literature, meaning do researchers have access to your papers. But this goes beyond access to papers to include access to your code and anything else that is part of your research workflow. As well as open source software, which does not have licencing costs, and public data repositories.
 
-Reproducibility refers to open collaboration and open tools. Essentially can you share your work with a colleague and they can easily download the necessary software, access the data, run the analysis/script with out errors, and see the same output you created on your end.
+Reproducibility refers to open collaboration and open tools. Essentially can you share your work with a colleague and they can easily download the necessary software, access the data, run the analysis with out errors, and see the same output you created on your end.
 
 And finally Inclusivity, we are developing these pipelines with the commitment of diversity and inclusion to expand participation and partnerships. Including to those who might not have access to proprietary (non-open source) software.
 
@@ -161,11 +161,11 @@ And finally Inclusivity, we are developing these pipelines with the commitment o
 ::: notes
 At RIBBiTR we have been doing our best to promote and adhere to open science principles.
 
-In the realm of Accessibility we have an internal PostgreSQL relational database stored on an AWS server. We have created a front end webapp to allow researchers to explore and download data to their local device. We also strongly recommend researchers to utilize open source software like RStudio, Jupyter Lab, and DBeaver. Following following completion of our grant the database will be stored in a public repository like DataOne. And finally we, publish in open access journals when possible
+In the realm of Accessibility we have an internal PostgreSQL relational database stored on an AWS server. We have created a front end webapp to allow researchers to explore and download data. We strongly recommend researchers to utilize open source software like RStudio, Jupyter Lab, and DBeaver. Following completion of our grant the database will be stored in a public repository like DataOne. And finally, when possible we publish in open access journals.
 
-The image here illustrates one example of a reproducible workflow we promote at RIBBiTR. Researchers create a back end connection to the cloud based database. They query and analyze their data of interest in RStudio. Researchers then develop manuscripts and collaborate through Quarto documents by pushing and pulling changes between authors through git and github. Finally the entire reproducible repository is published to a journal. 
+The image here illustrates one example of a reproducible workflow we promote at RIBBiTR. Researchers create a back end connection to the cloud based database. They query and analyze the data of interest in RStudio. Researchers then develop manuscripts and collaborate through Quarto documents by pushing and pulling changes between authors through git and github. Finally the entire reproducible repository is published to a journal. 
 
-As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates with lab and field based protocols. We also have our pilot and exploratory project funding for graduate students and post docs. And finally provide RIBBiTR 101 training sessions which our usually formatted as educational seminars for RIBBiTR researchers or associated researchers.
+As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates with lab and field based protocols. We also have our pilot and exploratory project funding for graduate students and post docs. And finally provide RIBBiTR 101 training sessions which are educational seminars for RIBBiTR researchers or associated researchers.
 :::
 
 ------------------------------------------------------------------------
@@ -194,10 +194,10 @@ As for inclusive: we at RIBBiTR have worked very hard to promote and build our e
 :::
 
 ::: notes
-The adoption of open science principles through out the sciences has and will almost certainly continue to increase the efficiency and quality of research, allow for expansion of innovation, and facilitate collaboration. With open science principles our colleagues can verify our research at a much more efficient pace by providing the raw data, code for analysis, and manuscript all in a reproducible repository.
+The adoption of open science principles has and will almost certainly continue to increase the efficiency and quality of research, allow for expansion of innovation, and facilitate collaboration. With open science principles our colleagues can verify our research at a much more efficient pace by providing the raw data, code for analysis, and manuscript all in a reproducible repository.
 
-Which brings me to my final point, take a moment and think about all the data you have ever collected or a student of yours has collected, whether it was one day in the field, a masters students two years worth of data, or an entire PhD project.
-Is that data just sitting on a hard drive on a dusty old laptop? Those are dark data, and I suspect we could pool all the dark data in this room and have readily available data for endless graduate students.
+Which brings me to my final point, take a moment and think about all the data you have ever collected or a student of yours has collected.
+Is that data just sitting on a hard drive in a dusty old laptop? Those are dark data, and I suspect we could pool all the dark data in this room and have readily available data for endless graduate students.
 
 So utilize public data repositories, share your data, and lets work together to uncover the answers hidden in our data.
 
