--- a/prez.qmd
+++ b/prez.qmd
@@ -150,7 +150,7 @@ At RIBBiTR we have been doing our best to promote and adhere to open science pri
 
 In the realm of Accessibility we have an internal PostgreSQL relational database stored on an AWS server. We have created a front end webapp to allow researchers to explore and download data. We strongly recommend researchers to utilize open source software like RStudio, Jupyter Lab, and DBeaver. Following completion of our grant the database will be stored in a public repository like DataOne. And finally, when possible we publish in open access journals.
 
-The image here illustrates one example of a reproducible workflow we promote at RIBBiTR. Researchers create a back end connection to the cloud based database. They query and analyze the data of interest in RStudio. Researchers utilize quarto documents to develop manuscripts and collaborate through git and github. Finally the entire reproducible repository is published to a journal. 
+The image here illustrates one example of a reproducible workflow we promote at RIBBiTR. We collect data using the Fulcrum app. Researchers create a back end connection to the cloud based database. They query and analyze the data of interest in RStudio. Researchers utilize quarto documents to develop manuscripts and collaborate through git and github. Finally the entire reproducible repository is published to a journal. 
 
 As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates with lab and field based protocols. We also have our pilot and exploratory project funding for graduate students and post docs. And finally we provide RIBBiTR 101 training sessions which are educational seminars for RIBBiTR researchers or associated researchers.
 
